--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
+    "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.12"
+    "@types/react-redux": "^7.1.12",
+    "@types/react-transition-group": "^4.4.0"
   }
 }
